...
                    android:paddingVertical="15dp"
                    tools:text="TextView" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/favorite_ActionButton"
            android:layout_width="59dp"
            android:layout_height="56dp"
            android:layout_marginEnd="15dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@color/colorWhite"
...
